media/boom/css/boom/page.less
#b-page {
	/* Container for action buttons, e.g. save, publish... */
	&-actions {
		.separator {
			margin-top: 6px;
			display: none;
			height: 1.5em;
			width: 1px;
			border-right: 1px solid #aaa;
		}
	}

	&-actions .ui-buttonset, &-metadata .ui-buttonset, &-metadata button {
		margin-top: 2px;
	}

	/* List of child pages which will be affected by a page being deleted */
	&-delete-children {
		overflow: auto;
		max-height: 200px;
		_height: 200px;
		margin-bottom: 1em;

		ul {
			margin-bottom: 0;
		}
	}

	&-topbar {
		width: 100%;
		background-color: transparent;
	}

	&-readability {
		width: 50px;
	}

	&-invisible {
		margin-top: 0px;
	}

	&-settings {
		&-tags {
			&-add {
				&-name {
					display: none;
				}
			}
		}

		&-children-reorder {
			float: right;
		}

		&-children-sort {
			list-style-image:url('/media/boom/img/sort.png');
			& li {
				padding: 3px;
				&:hover {
					cursor: hand;
					cursor: pointer;
				}
			}
		}

		&-urls {
			li {
				background-color: #fff;
				color: #000;
				border-bottom: 1px solid #000;
				overflow: hidden;

				&.ui-state-active {
					background-color: #6F7E8E;

					.tools {
						visibility: hidden;
					}
				}

				input:checked + label {
					background-color: inherit;
					color: inherit;
					font-weight: bold;
				}

				label {
					display: inline-block;
					color: #666;

					&.primary {
						float:right;
					}
				}

				.tools {
					float :right;

					button {
						display: inline-block;
						border: none;
						padding: 3px !important;
						background-color: #fff;
						color: #909;
						font-weight: bold;
					}

					label {
						display: inline-block;

						span {
							display: inline-block;
							width: 15px;
							height: 15px;
							background-color: #666;
							color: #fff;
							padding: 3px;
						}
						span.off {
							background-color: #333;
							color: #fff;
						}
					}

					input[type=checkbox]:checked + label {
						background-color: inherit;
						color: inherit;
						span.on {
							background-color: #333;
							color: #fff;
						}


						span.off {
							background-color: #666;
							color: #fff;
						}
					}
				}
			}
		}
	}

	&-toggle-visible {
		display: none;
	}

	&-version-status {
		background-color: #d6278e;
		text-transform: capitalize;
		width: 50px;
		
		span {
			padding: .4em;
		}

		&[data-status=published] {
			background-color: #75d627;
		}

		&[data-status=embargoed] {
			background-color: #e3ca68;
		}

		&[data-status='pending approval'] {
			background-color: #249ac1;
		}
	}

	&-version-template {
		label {
			margin-top: 1em;
			font-weight: bold;
		}

		select {
			margin-top: 1em;
		}

		#count, #description {
			margin-top: 1em;

			p {
				display: inline;
				margin-left: 0.5em;
			}
		}
	}
}

.b-page {
	&-container {
		margin-top: 20px;
	}

	&-settings {
		label {
			margin-bottom: 0.5em;
		}
	}

	&-toolbar {
		width: 50px;
		height: 100%;
		padding: 4px;

		.ui-button, button {
			display: block;

			&.ui-helper-hidden {
				display: none;
			}
		}
	}
}

#b-feature-remove {
	margin-right: 60px;
}

#b-page-settings-url-add {
	margin-right: 308px;
}

#b-form-addurl {
	margin-top: 2em;
	width: 100%;
	padding-bottom: 3em;

	label	{
		width: 100%;

		input[type=text] {
			width: 80%;
		}
	}
}

